# swarm_ws

./: .gitignore  README.md  USB-file-pull.sh  arduino_make_upload.sh  bt.sh  clint_ros_launch.sh  clint_ros_logger.sh  disk-space-check.sh  host_ros_launch.sh  launch.sh  my_setup.sh  ola_use_me.sh  setup_controller_teleop.sh  setup_teleop.sh  start_up_script.sh  test.sh  test1.sh  test2.sh  test_export_master.sh
Matlab/: SLAM_GOT_Transform.m  beacon_location_plot.asv  beacon_location_plot.m  diff_drive.asv  diff_drive.m  diff_drive_sym.m  equations.m  magnet.m  motor_curve_plotting.m  multi_unit_sim.m  ploting_motor_curve.m  stepresponse.m  swarmLineController.asv  swarmLineController.m  swarmTeamController.m  test_diff_drive.m
arduino_code/: IMU_ROS.ino  IMU_new.ino
arduino_code/GOT_ROS/: GOT_ROS.ino
arduino_code/HEX/: motor_control.ino.hex
arduino_code/blinky/: Makefile  (+1 more)
bash/: arduino_make_upload.sh  arduino_maker.sh  auto_start_setup.sh  bt.sh  bt_boot.sh  change_username.sh  client_ros_rviz.sh  clint_ros_launch.sh  clint_ros_rqt.sh  code_runner.sh  code_runner_py.sh  host_ros_launch.sh  host_ros_pylaunch.sh  launch.sh  my_setup.sh  start_up_script.sh  teensy_push.sh  test.sh  update.sh  upload_results.sh
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
python_simulation/: trial_simulation.py
src/rudolph_v4/: CMakeLists.txt  package.xml
src/rudolph_v4/config/: joint_names_rudolph_v4.yaml
src/rudolph_v4/launch/: display.launch  gazebo.launch
src/rudolph_v4/meshes/: base_laser.STL  lidar_to_footprint.STL
src/rudolph_v4/urdf/: rudolph_v4.urdf
(+335 files in other folders)
